// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders TextInput and Description snapshot 1`] = `
<body>
  @media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

<div
    aria-hidden="true"
  />
  .c8 {
  margin: 0;
}

.c10 {
  font-weight: normal;
}

.c4 {
  vertical-align: middle;
}

.c12 {
  box-sizing: border-box;
  border: 1px solid hsl(200,9%,35%);
  border-radius: 8px;
  height: 32px;
  outline: none;
  box-sizing: border-box;
  padding: 0px 28px 0px 15px;
  font-size: 18px;
  line-height: 1.5;
  width: 90%;
  background-color: hsl(0,0%,100%);
}

.c12:disabled {
  cursor: not-allowed;
  border-color: hsl(0,0%,90%);
  background-color: hsl(0,0%,90%);
  color: hsl(0,0%,70%);
}

.c12:disabled::-webkit-input-placeholder {
  color: hsl(0,0%,70%);
}

.c12:disabled::-moz-placeholder {
  color: hsl(0,0%,70%);
}

.c12:disabled:-ms-input-placeholder {
  color: hsl(0,0%,70%);
}

.c12:disabled::placeholder {
  color: hsl(0,0%,70%);
}

.c12:focus {
  border-color: hsl(200,96%,35%);
}

.c12::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c12::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c12:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c12::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c11 {
  box-sizing: border-box;
}

.c15 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  margin-right: 24px;
  background-color: hsl(353,84%,44%);
  color: hsl(0,0%,100%);
  border-color: hsl(353,84%,44%);
}

.c15::-moz-focus-inner {
  border: 0;
}

.c15:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c15 svg {
  display: inline-block;
  margin-top: -4px;
}

.c15 .sc-gkdzZj {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c15:hover {
  background-color: hsl(353,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(353,96%,11%);
}

.c5 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-top: 40px;
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(46,53,56,0.9);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  vertical-align: middle;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  font-size: 24px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 0;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 101;
}

.c1 > [data-reach-dialog-content] {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  width: 100%;
  border: 1px solid;
  border-radius: 8px;
  background: white;
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
  margin: auto;
  max-width: 80%;
  outline: none;
  padding: 64px 24px 40px 24px;
  position: relative;
  border-color: hsl(353,84%,44%);
}

.c1 > [data-reach-dialog-content] .modal-children {
  max-width: 100%;
  overflow-wrap: break-word;
  word-wrap: break-word;
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  max-height: 60vh;
}

.c1 > [data-reach-dialog-content] .modal-children > * {
  max-width: 100%;
}

.c1 > [data-reach-dialog-content] .modal-close-btn {
  height: 16px;
  position: absolute;
  right: 24px;
  top: 24px;
  width: 16px;
  font-size: 16px;
}

.c16 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c16:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c16:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c16::-moz-focus-inner {
  border: 0;
}

.c16 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c2 .title-icon {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  margin: 0;
}

.c2 .children {
  overflow-wrap: break-word;
  word-wrap: break-word;
  text-align: center;
  width: 100%;
}

.c2 .children > * {
  width: 100%;
}

@media screen and (min-width:1024px) {
  .c12 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c15 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c1 > [data-reach-dialog-content] {
    padding: 40px 88px;
    max-width: 30%;
  }

  .c1 > [data-reach-dialog-content] .modal-close-btn {
    height: 24px;
    position: absolute;
    right: 40px;
    top: 40px;
    width: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c16 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c2 .title-icon {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          aria-label="Modal"
          class="c0 c1 c2"
          data-reach-dialog-overlay=""
          variant="danger"
        >
          <div
            aria-label="Modal"
            aria-modal="true"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            <button
              aria-label="Close Modal"
              class="c3 modal-close-btn"
              type="button"
              variant="standard"
            >
              <svg
                class="c4"
                fill="currentcolor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.4142136,12 L22.7071068,21.2928932 C23.0976311,21.6834175 23.0976311,22.3165825 22.7071068,22.7071068 C22.3165825,23.0976311 21.6834175,23.0976311 21.2928932,22.7071068 L12,13.4142136 L2.70710678,22.7071068 C2.31658249,23.0976311 1.68341751,23.0976311 1.29289322,22.7071068 C0.902368927,22.3165825 0.902368927,21.6834175 1.29289322,21.2928932 L10.5857864,12 L1.29289322,2.70710678 C0.902368927,2.31658249 0.902368927,1.68341751 1.29289322,1.29289322 C1.68341751,0.902368927 2.31658249,0.902368927 2.70710678,1.29289322 L12,10.5857864 L21.2928932,1.29289322 C21.6834175,0.902368927 22.3165825,0.902368927 22.7071068,1.29289322 C23.0976311,1.68341751 23.0976311,2.31658249 22.7071068,2.70710678 L13.4142136,12 Z"
                />
              </svg>
            </button>
            <div
              class="c5 c6 modal-children"
            >
              <div
                class="c5 c7 title-icon"
              >
                <h1
                  class="c8"
                >
                  Modal Title
                </h1>
              </div>
              <div
                class="c5 c9 children"
              >
                <h4
                  class="c10"
                  data-testid="description"
                  font-weight="normal"
                >
                  Description text
                </h4>
                <div
                  class="c11"
                >
                  <input
                    class="c12"
                    data-testid="input"
                    placeholder="Placeholder"
                    width="90%"
                  />
                </div>
              </div>
              <div
                class="c13 c14"
              >
                <button
                  aria-live="assertive"
                  class="c15"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
                <button
                  class="c16"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;

exports[`Modal variant is danger snapshot 1`] = `
<body>
  @media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

<div
    aria-hidden="true"
  />
  .c8 {
  margin: 0;
}

.c4 {
  vertical-align: middle;
}

.c12 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  margin-right: 24px;
  background-color: hsl(353,84%,44%);
  color: hsl(0,0%,100%);
  border-color: hsl(353,84%,44%);
}

.c12::-moz-focus-inner {
  border: 0;
}

.c12:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c12 svg {
  display: inline-block;
  margin-top: -4px;
}

.c12 .sc-gkdzZj {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c12:hover {
  background-color: hsl(353,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(353,96%,11%);
}

.c5 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-top: 40px;
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(46,53,56,0.9);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  vertical-align: middle;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  font-size: 24px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 0;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 101;
}

.c1 > [data-reach-dialog-content] {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  width: 100%;
  border: 1px solid;
  border-radius: 8px;
  background: white;
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
  margin: auto;
  max-width: 80%;
  outline: none;
  padding: 64px 24px 40px 24px;
  position: relative;
  border-color: hsl(353,84%,44%);
}

.c1 > [data-reach-dialog-content] .modal-children {
  max-width: 100%;
  overflow-wrap: break-word;
  word-wrap: break-word;
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  max-height: 60vh;
}

.c1 > [data-reach-dialog-content] .modal-children > * {
  max-width: 100%;
}

.c1 > [data-reach-dialog-content] .modal-close-btn {
  height: 16px;
  position: absolute;
  right: 24px;
  top: 24px;
  width: 16px;
  font-size: 16px;
}

.c13 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c13:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c13::-moz-focus-inner {
  border: 0;
}

.c13 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c2 .title-icon {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  margin: 0;
}

.c2 .children {
  overflow-wrap: break-word;
  word-wrap: break-word;
  text-align: center;
  width: 100%;
}

.c2 .children > * {
  width: 100%;
}

@media screen and (min-width:1024px) {
  .c12 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c1 > [data-reach-dialog-content] {
    padding: 40px 88px;
    max-width: 30%;
  }

  .c1 > [data-reach-dialog-content] .modal-close-btn {
    height: 24px;
    position: absolute;
    right: 40px;
    top: 40px;
    width: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c13 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c2 .title-icon {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          aria-label="Modal"
          class="c0 c1 c2"
          data-reach-dialog-overlay=""
          variant="danger"
        >
          <div
            aria-label="Modal"
            aria-modal="true"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            <button
              aria-label="Close Modal"
              class="c3 modal-close-btn"
              type="button"
              variant="standard"
            >
              <svg
                class="c4"
                fill="currentcolor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.4142136,12 L22.7071068,21.2928932 C23.0976311,21.6834175 23.0976311,22.3165825 22.7071068,22.7071068 C22.3165825,23.0976311 21.6834175,23.0976311 21.2928932,22.7071068 L12,13.4142136 L2.70710678,22.7071068 C2.31658249,23.0976311 1.68341751,23.0976311 1.29289322,22.7071068 C0.902368927,22.3165825 0.902368927,21.6834175 1.29289322,21.2928932 L10.5857864,12 L1.29289322,2.70710678 C0.902368927,2.31658249 0.902368927,1.68341751 1.29289322,1.29289322 C1.68341751,0.902368927 2.31658249,0.902368927 2.70710678,1.29289322 L12,10.5857864 L21.2928932,1.29289322 C21.6834175,0.902368927 22.3165825,0.902368927 22.7071068,1.29289322 C23.0976311,1.68341751 23.0976311,2.31658249 22.7071068,2.70710678 L13.4142136,12 Z"
                />
              </svg>
            </button>
            <div
              class="c5 c6 modal-children"
            >
              <div
                class="c5 c7 title-icon"
              >
                <h1
                  class="c8"
                >
                  Modal Title
                </h1>
              </div>
              <div
                class="c5 c9 children"
              />
              <div
                class="c10 c11"
              >
                <button
                  aria-live="assertive"
                  class="c12"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
                <button
                  class="c13"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;

exports[`Modal variant is success snapshot 1`] = `
<body>
  @media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

@media screen and (min-width:1024px) {

}

<div
    aria-hidden="true"
  />
  .c8 {
  margin: 0;
}

.c4 {
  vertical-align: middle;
}

.c12 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  margin-right: 24px;
  background-color: hsl(145,89%,28%);
  color: hsl(0,0%,100%);
  border-color: hsl(145,89%,28%);
}

.c12::-moz-focus-inner {
  border: 0;
}

.c12:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c12 svg {
  display: inline-block;
  margin-top: -4px;
}

.c12 .sc-gkdzZj {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c12:hover {
  background-color: hsl(145,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(145,96%,11%);
}

.c5 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-top: 40px;
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(46,53,56,0.9);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  vertical-align: middle;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  font-size: 24px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 0;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 101;
}

.c1 > [data-reach-dialog-content] {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  width: 100%;
  border: 1px solid;
  border-radius: 8px;
  background: white;
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
  margin: auto;
  max-width: 80%;
  outline: none;
  padding: 64px 24px 40px 24px;
  position: relative;
  border-color: hsl(145,89%,28%);
}

.c1 > [data-reach-dialog-content] .modal-children {
  max-width: 100%;
  overflow-wrap: break-word;
  word-wrap: break-word;
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  max-height: 60vh;
}

.c1 > [data-reach-dialog-content] .modal-children > * {
  max-width: 100%;
}

.c1 > [data-reach-dialog-content] .modal-close-btn {
  height: 16px;
  position: absolute;
  right: 24px;
  top: 24px;
  width: 16px;
  font-size: 16px;
}

.c13 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c13:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c13::-moz-focus-inner {
  border: 0;
}

.c13 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c2 .title-icon {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  margin: 0;
}

.c2 .children {
  overflow-wrap: break-word;
  word-wrap: break-word;
  text-align: center;
  width: 100%;
}

.c2 .children > * {
  width: 100%;
}

@media screen and (min-width:1024px) {
  .c12 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c1 > [data-reach-dialog-content] {
    padding: 40px 88px;
    max-width: 30%;
  }

  .c1 > [data-reach-dialog-content] .modal-close-btn {
    height: 24px;
    position: absolute;
    right: 40px;
    top: 40px;
    width: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c13 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c2 .title-icon {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          aria-label="Modal"
          class="c0 c1 c2"
          data-reach-dialog-overlay=""
          variant="success"
        >
          <div
            aria-label="Modal"
            aria-modal="true"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            <button
              aria-label="Close Modal"
              class="c3 modal-close-btn"
              type="button"
              variant="standard"
            >
              <svg
                class="c4"
                fill="currentcolor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.4142136,12 L22.7071068,21.2928932 C23.0976311,21.6834175 23.0976311,22.3165825 22.7071068,22.7071068 C22.3165825,23.0976311 21.6834175,23.0976311 21.2928932,22.7071068 L12,13.4142136 L2.70710678,22.7071068 C2.31658249,23.0976311 1.68341751,23.0976311 1.29289322,22.7071068 C0.902368927,22.3165825 0.902368927,21.6834175 1.29289322,21.2928932 L10.5857864,12 L1.29289322,2.70710678 C0.902368927,2.31658249 0.902368927,1.68341751 1.29289322,1.29289322 C1.68341751,0.902368927 2.31658249,0.902368927 2.70710678,1.29289322 L12,10.5857864 L21.2928932,1.29289322 C21.6834175,0.902368927 22.3165825,0.902368927 22.7071068,1.29289322 C23.0976311,1.68341751 23.0976311,2.31658249 22.7071068,2.70710678 L13.4142136,12 Z"
                />
              </svg>
            </button>
            <div
              class="c5 c6 modal-children"
            >
              <div
                class="c5 c7 title-icon"
              >
                <h1
                  class="c8"
                >
                  Modal Title
                </h1>
              </div>
              <div
                class="c5 c9 children"
              />
              <div
                class="c10 c11"
              >
                <button
                  aria-live="assertive"
                  class="c12"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
                <button
                  class="c13"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;

exports[`Modal variant is warning snapshot 1`] = `
.c8 {
  margin: 0;
}

.c4 {
  vertical-align: middle;
}

.c12 {
  position: relative;
  padding: 2px 30px;
  outline: none;
  cursor: pointer;
  overflow: visible;
  box-sizing: border-box;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 18px;
  line-height: 1.5;
  border: 1px solid;
  border-radius: 8px;
  margin-right: 24px;
  background-color: hsl(47,82%,47%);
  color: hsl(200,10%,20%);
  border-color: hsl(47,82%,47%);
}

.c12::-moz-focus-inner {
  border: 0;
}

.c12:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 10px);
  width: calc(100% + 10px);
  top: -5px;
  left: -5px;
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c12 svg {
  display: inline-block;
  margin-top: -4px;
}

.c12 .sc-gkdzZj {
  position: absolute;
  left: 50%;
  top: 50%;
  margin-left: -8px;
  margin-top: -8px;
}

.c12:hover {
  background-color: hsl(47,96%,11%);
  color: hsl(0,0%,100%);
  border-color: hsl(47,96%,11%);
}

.c5 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-top: 40px;
  margin-bottom: 4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 {
  position: fixed;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: rgba(46,53,56,0.9);
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  text-align: center;
  vertical-align: middle;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  z-index: 100;
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1px;
  border: none;
  background: transparent;
  outline: none;
  cursor: pointer;
  position: relative;
  overflow: visible;
  color: hsl(200,96%,11%);
  font-size: 24px;
}

.c3::-moz-focus-inner {
  border: 0;
}

.c3:focus::after {
  content: '';
  display: block;
  position: absolute;
  height: calc(100% + 8px);
  width: calc(100% + 8px);
  border: 1px solid;
  border-radius: 8px;
  border-color: hsl(200,96%,35%);
  box-sizing: border-box;
}

.c3:hover {
  color: hsl(200,96%,35%);
}

.c1 {
  bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  left: 0;
  overflow: auto;
  position: fixed;
  right: 0;
  top: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  z-index: 101;
}

.c1 > [data-reach-dialog-content] {
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  width: 100%;
  border: 1px solid;
  border-radius: 8px;
  background: white;
  box-shadow: 0px 9px 24px hsla(200,96%,35%,0.3);
  margin: auto;
  max-width: 80%;
  outline: none;
  padding: 64px 24px 40px 24px;
  position: relative;
  border-color: hsl(47,82%,47%);
}

.c1 > [data-reach-dialog-content] .modal-children {
  max-width: 100%;
  overflow-wrap: break-word;
  word-wrap: break-word;
  overflow: auto;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  max-height: 60vh;
}

.c1 > [data-reach-dialog-content] .modal-children > * {
  max-width: 100%;
}

.c1 > [data-reach-dialog-content] .modal-close-btn {
  height: 16px;
  position: absolute;
  right: 24px;
  top: 24px;
  width: 16px;
  font-size: 16px;
}

.c13 {
  font-size: 18px;
  line-height: 1.5;
  position: relative;
  border: none;
  padding: 4px;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  box-sizing: border-box;
  color: hsl(200,96%,11%);
}

.c13:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:focus::after {
  content: '';
  display: block;
  box-sizing: border-box;
  position: absolute;
  height: 100%;
  width: 100%;
  top: 0px;
  left: 0px;
  border: 1px solid hsl(200,96%,35%);
  border-radius: 8px;
}

.c13::-moz-focus-inner {
  border: 0;
}

.c13 svg {
  display: inline-block;
  margin-top: -4px;
  margin-right: 4px;
}

.c2 .title-icon {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  text-align: center;
  margin: 0;
}

.c2 .children {
  overflow-wrap: break-word;
  word-wrap: break-word;
  text-align: center;
  width: 100%;
}

.c2 .children > * {
  width: 100%;
}

@media screen and (min-width:1024px) {
  .c12 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c1 > [data-reach-dialog-content] {
    padding: 40px 88px;
    max-width: 30%;
  }

  .c1 > [data-reach-dialog-content] .modal-close-btn {
    height: 24px;
    position: absolute;
    right: 40px;
    top: 40px;
    width: 24px;
  }
}

@media screen and (min-width:1024px) {
  .c13 {
    font-size: 18px;
    line-height: 1.5;
  }
}

@media screen and (min-width:1024px) {
  .c2 .title-icon {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<body>
  <div
    aria-hidden="true"
  />
  <reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          aria-label="Modal"
          class="c0 c1 c2"
          data-reach-dialog-overlay=""
          variant="warning"
        >
          <div
            aria-label="Modal"
            aria-modal="true"
            data-reach-dialog-content=""
            role="dialog"
            tabindex="-1"
          >
            <button
              aria-label="Close Modal"
              class="c3 modal-close-btn"
              type="button"
              variant="standard"
            >
              <svg
                class="c4"
                fill="currentcolor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.4142136,12 L22.7071068,21.2928932 C23.0976311,21.6834175 23.0976311,22.3165825 22.7071068,22.7071068 C22.3165825,23.0976311 21.6834175,23.0976311 21.2928932,22.7071068 L12,13.4142136 L2.70710678,22.7071068 C2.31658249,23.0976311 1.68341751,23.0976311 1.29289322,22.7071068 C0.902368927,22.3165825 0.902368927,21.6834175 1.29289322,21.2928932 L10.5857864,12 L1.29289322,2.70710678 C0.902368927,2.31658249 0.902368927,1.68341751 1.29289322,1.29289322 C1.68341751,0.902368927 2.31658249,0.902368927 2.70710678,1.29289322 L12,10.5857864 L21.2928932,1.29289322 C21.6834175,0.902368927 22.3165825,0.902368927 22.7071068,1.29289322 C23.0976311,1.68341751 23.0976311,2.31658249 22.7071068,2.70710678 L13.4142136,12 Z"
                />
              </svg>
            </button>
            <div
              class="c5 c6 modal-children"
            >
              <div
                class="c5 c7 title-icon"
              >
                <h1
                  class="c8"
                >
                  Modal Title
                </h1>
              </div>
              <div
                class="c5 c9 children"
              />
              <div
                class="c10 c11"
              >
                <button
                  aria-live="assertive"
                  class="c12"
                  type="button"
                >
                  <span>
                    Confirm
                  </span>
                </button>
                <button
                  class="c13"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;
